--- a/DSI2016WEB/WebContent/Registro.xhtml
+++ b/DSI2016WEB/WebContent/Registro.xhtml
@@ -49,8 +49,8 @@
 							<p:commandButton value="Excluir"
 								id="cbExcluir"
 								update=":form"
+								onsucess="PF('dlg1').show()"/>
 								
-								onsuccess="PF('dlg1').show()"/>
 								
 						</f:facet>
 					</p:dataTable>
